  * Clean up options in geni-enable-user and geni-disable-user (#918)
  * Clean usage in scripts (#919)
  * Add a missing copyright (#920)
  * Add ION aggregate (#922)
  * geni-foo-member-attribute scripts should use the MA API (#923)
  * Ensure geni-* scripts are installed (#924)
  * Add GPO lab dev server CA cert (#925)
  * Handle error returns in geni-enable-user and disable-user (#927)

== 2.6 ==
  * Split out the clearinghouse implementation into the new `chapi`
  repository. That new clearinghouse implements the
  [http://groups.geni.net/geni/wiki/UniformClearinghouseAPI Uniform
  Federation APIs] and uses XML-RPC over SSL instead of S/MIME, but
  otherwise retains the funtionality of the previous clearinghouse
  server. To support this change, the `*_client` library functions have
  been re-written, but the portal UI pages remain largely
  unchanged. From here on, this repository and release notes cover
  only the portal client.
  * Ensure WiMAX givenname is non empty (#885)
  * Clean up the email on handling a project join request (#881)
  * Check for valid project_id in do-handle-project-join-request (#886)
  * Use convert_boolean when checking a boolean DB value (#888)
  * Remove cruft line from kettering-ig-of cert (#890)

= GENI Portal and Clearinghouse Release Notes =

== 2.5.1 ==
  * Send only current projects, not expired, to GEMINI (#887)

== 2.5 ==
  * Improve error reporting in geni-revoke-member-privilege (#853)
  * Quiet a debug printing rspecs (#858)
  * In WiMAX, handle user swith no sn or givenName. Also fix a logic error
    causing projects to seem not WiMAX enabled. (#859)
  * Slice names are now unique only to the project, since ProtoGENI
  made a fix (#433)
  * Refer to scripts without the .py extension (#862)
  * Undefined index when generating a cert from a bad CSR (#870)
  * Add language to discourage people from randomly trying to join
    unknown projects, and to discourage leads from adding them. (#875)